Proyecto CRUD con Express, Mongo y Swagger
